[package]
name = "cathy"
version = "0.1.0"
edition = "2018"
authors = ["Mars Zuo <fuhongzuo@gmail.com>"]
description = "Cathy is an instant messaging system development by Rust."
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/ZuoFuhong/cathy"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["serde", "v4"] }
protobuf = "2.24.1"
chrono = "0.4"